welcome.lessons.welcome.methods.flowerpot.FlowerPot.scala.error
FlowerPot:8: error: too many arguments for method brossage: ()Unit
	brossage(c);
                ^